Added Step to create .env file
Added step to create .env file in the GitHub Action workflow

--- a/.github/workflows/network_tests.yml
+++ b/.github/workflows/network_tests.yml
@@ -20,6 +20,11 @@ jobs:
       uses: actions/setup-go@v4
       with:
         go-version: '1.24'
+    
+    - name: Create .env file for server
+      working-directory: ./api
+      run: |
+        echo "CLOUD_ENV=false" >> .env
 
     - name: Build
       working-directory: ./api
